fix QR
